test/errors/field_names_error/zs/reserved_generated_keyword_error.zs
package reserved_generated_keyword_error;

struct Item
{
    uint16      param;
    uint32      short; // reserved keyword in generated c++ / java
};
